--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "yarn install && ts-node-dev --ignore-watch ./node_modules --transpile-only --respawn -r tsconfig-paths/register ./src/server.ts",
-    "routes": "yarn dev --show-routes",
+    "dev": "tsx watch ./src/server.ts",
+    "routes": "tsx ./src/server.ts --show-routes",
     "build": "tsc -p .",
-    "start": "yarn build && yarn install && ts-node-dev --ignore-watch ./node_modules --transpile-only --respawn -r dotenv/config ./src/server.ts",
+    "start": "yarn build && node ./dist/server.js",
     "lint": "eslint --fix ./src/**/*.ts",
     "format": "prettier --write . --loglevel silent",
-    "test": "jest",
-    "run:llama": "ts-node-dev --quiet ./src/environment/scripts/llama.ts"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -21,11 +21,13 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.15.11",
     "@types/node-json-db": "^0.9.3",
+    "@types/prettyjson": "^0.0.33",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "axios": "^0.25.0",
@@ -39,7 +41,7 @@
     "eslint-plugin-unused-imports": "^1.0.1",
     "express-async-errors": "^3.1.1",
     "husky": "^4.3.0",
-    "inversify": "^6.0.1",
+    "inversify": "^6.0.2",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.4.3",
     "jest": "^28.1.3",
@@ -47,9 +49,11 @@
     "msw": "^0.44.2",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.2.2",
+    "ts-jest": "^28.0.7",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.7.4",
+    "tsx": "^4.19.1",
+    "typescript": "^4.9.5",
     "uuid": "^8.3.2"
   },
   "dependencies": {
@@ -65,8 +69,6 @@
     "node-cron": "^3.0.0",
     "node-json-db": "^1.4.1",
     "prettyjson": "^1.2.5",
-    "sift": "^15.1.3",
-    "ts-jest": "^28.0.7",
-    "tsconfig-paths": "^3.12.0"
+    "sift": "^15.1.3"
   }
 }
