--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "ESNext", // Changed to support ES modules
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": false,
-    "esModuleInterop": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["ES2020", "dom"],
     "types": ["reflect-metadata", "jest", "node"],
-    "moduleResolution": "node",
+    "moduleResolution": "node", // Keep Node resolution strategy
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "baseUrl": "./src",
