--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext", // Changed to support ES modules
+    "target": "ES2022",
+    "module": "ES2022", // Changed to support ES modules
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": false,
