object data transmission

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 ENV=Development
 API_URL=http://localhost:5000
+
+# Update this value with the bootstrap nodes you want to use 
+LIBP2P_BOOTSTRAP_NODES="/ip4/203.0.113.1/tcp/8000/p2p/QmProdBootstrap1,/ip4/203.0.113.2/tcp/8000/p2p/QmProdBootstrap2"
